codegen/tests/errors/not_allowed_macro_in_trait_definition.stderr
error: only trait methods with untyped receiver are allowed
 --> tests/errors/not_allowed_macro_in_trait_definition.rs:5:5
  |
5 |     unreachable!();
  |     ^^^^^^^^^^^
